# iterative_mem

./: README.md  pyproject.toml
benchmarks/: run_eval.py
docs/: openclaw_neuromem_engineering_plan.md
examples/: chat_demo.py
openclaw_memory/adapters/: openclaw_plugin.py
openclaw_memory/core/: consolidation.py  engram_graph.py  forgetting.py  plasticity.py  recall.py
openclaw_memory/explain/: trace.py
openclaw_memory/safety/: poisoning_guard.py
openclaw_memory/schemas/: event.py  memory.py
openclaw_memory/storage/: sqlite_store.py
tests/: test_forgetting.py  test_plasticity.py  test_poisoning_guard.py  test_recall.py  test_reconsolidation.py
