[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-neuromem"
version = "0.1.0"
description = "Biomimetic memory plugin scaffold for OpenClaw"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["openclaw_memory*"]
